force-app/main/default/objects/RTL_product_master__c/RTL_product_master__c.object-meta.xml
<CustomObject>
    <description>To store list of products for Retail banking only.</description>
    <label>Retail Product Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Retail Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>