force-app/main/default/objects/RTL_product_master__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show only products marked as Active in interested products &amp; opportunity .</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>