force-app/main/default/objects/RTL_product_master__c/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>