force-app/main/default/objects/RTL_product_master__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description (TH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>