force-app/main/default/objects/RTL_product_master__c/fields/FNA_Active__c.field-meta.xml
<CustomField>
    <fullName>FNA_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FNA Active</label>
    <type>Checkbox</type>
</CustomField>