force-app/main/default/objects/RTL_product_master__c/fields/FNA_Assigned_Pool__c.field-meta.xml
<CustomField>
    <fullName>FNA_Assigned_Pool__c</fullName>
    <label>FNA Assigned Pool</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>RMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>