force-app/main/default/objects/RTL_product_master__c/fields/FNA_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>FNA_Product_Code__c</fullName>
    <description>Formula to show FNA product code for matching product holding.</description>
    <formula>IF( RTL_Product_Group_Upper__c = &quot;DEPOSIT&quot;,  MID( Product_Code__c , 2,  LEN(Product_Code__c) -3 ) , 
     MID( Product_Code__c , 1,  4 )    
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FNA Product Code</label>
    <type>Text</type>
</CustomField>