force-app/main/default/objects/RTL_product_master__c/fields/FNA_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>FNA_Product_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FNA Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>