force-app/main/default/objects/RTL_product_master__c/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fund Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>