force-app/main/default/objects/RTL_product_master__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Product Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>