force-app/main/default/objects/RTL_product_master__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>