force-app/main/default/objects/RTL_product_master__c/fields/Product_Sub_group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Sub group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>