force-app/main/default/objects/RTL_product_master__c/fields/RTL_Issuer_Fund_House__c.field-meta.xml
<CustomField>
    <fullName>RTL_Issuer_Fund_House__c</fullName>
    <description>keep issuer fund house of MF product // CR MF By Phone</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuer Fund House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>