force-app/main/default/objects/RTL_product_master__c/fields/RTL_Product2_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product2_Name__c</fullName>
    <description>This is the field to be synced from Product2.Name from backend system.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>