force-app/main/default/objects/RTL_product_master__c/fields/RTL_Product_Group_Upper__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group_Upper__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group Upper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>