force-app/main/default/objects/RTL_product_master__c/fields/RTL_Product_Smart_Info__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Smart_Info__c</fullName>
    <description>Smart Info Link for this Product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Smart Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>