force-app/main/default/objects/RTL_product_master__c/listViews/All_Retail.listView-meta.xml
<ListView>
    <fullName>All_Retail</fullName>
    <columns>NAME</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Sub_group__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>RTL_Product2_Name__c</columns>
    <columns>Fund_Type__c</columns>
    <columns>Asset_Class__c</columns>
    <columns>Product_Code__c</columns>
    <columns>RTL_Product_Smart_Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Retail</label>
    <language>en_US</language>
</ListView>