force-app/main/default/objects/RTL_product_master__c/listViews/Retail_InActive.listView-meta.xml
<ListView>
    <fullName>Retail_InActive</fullName>
    <columns>NAME</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Sub_group__c</columns>
    <columns>Description__c</columns>
    <columns>RTL_Product2_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Asset_Class__c</columns>
    <columns>Fund_Type__c</columns>
    <columns>RTL_Product_Smart_Info__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Retail - InActive</label>
    <language>en_US</language>
</ListView>