force-app/main/default/objects/RTL_product_master__c/listViews/Retail_To_be_Activate.listView-meta.xml
<ListView>
    <fullName>Retail_To_be_Activate</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Sub_group__c</columns>
    <columns>Description__c</columns>
    <columns>RTL_Product2_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Active__c</columns>
    <columns>RTL_Issuer_Fund_House__c</columns>
    <columns>Asset_Class__c</columns>
    <columns>Fund_Type__c</columns>
    <columns>RTL_Product_Smart_Info__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/8/2019 12:00 AM</value>
    </filters>
    <label>Retail - To be Activate</label>
    <language>en_US</language>
</ListView>